--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -499,17 +499,30 @@
   <string name="pocket_mode">Кишеньковий режим</string>
   <string name="pocket_mode_summary">Активація даної функції вимкне керування пробудженням, коли пристрій знаходиться в кишені.</string>
   <string name="timeout">Час очікування</string>
+  <string name="timeout_summary">Встановіть затримку, після якої пробудження по подв. тапу буде відключено, коли екран погасне.</string>
   <string name="charge_timeout">Тайм-аут зарядження</string>
+  <string name="charge_timeout_summary">Установлення тривалості, коли елементи керування пробудженням буде вимкнуто, після того, як екран вимкнеться під час заряджання.</string>
   <string name="power_key_suspend">Відключення сенсора при натисканні кнопки живлення</string>
   <string name="area">Область</string>
   <string name="width">Ширина</string>
   <string name="height">Висота</string>
   <string name="vibration">Вібрація</string>
   <string name="vibration_strength">Сила вібрації</string>
+  <string name="key_power_mode">Режим энергозбереження</string>
   <string name="charging_mode">Режим заряджання</string>
   <!-- Sound -->
   <string name="sound_control">Управління звуком</string>
   <string name="headset_highperf_mode">Режим високої якості для навушників</string>
+  <string name="headphone_gain">Підсилення навушників</string>
+  <string name="handset_microphone_gain">Підсилення мікрофону гарнітури</string>
+  <string name="cam_microphone_gain">Підсилення мікрофону відеокамери</string>
+  <string name="speaker_gain">Підсилення динаміка</string>
+  <string name="headphone_poweramp_gain">Підсилення навушників PowerAmp</string>
+  <string name="headphone_tpa6165_gain">Підсилення навушників Amp (TPA6165 Розширення)</string>
+  <string name="lock_output_gain">Блокування підсилення виведення</string>
+  <string name="lock_output_gain_summary">Запобігти зміні підсилення для навушників/динаміків</string>
+  <string name="lock_mic_gain">Блокування підсилення мікрофону</string>
+  <string name="lock_mic_gain_summary">Запобігти зміні підсилення для мікрофону</string>
   <string name="microphone_gain">Підсилення мікрофону</string>
   <string name="volume_gain">Збільшення гучності</string>
   <!-- Battery -->
@@ -518,6 +531,7 @@
   <string name="capacity">Ємність</string>
   <string name="usb_fast_charge">Швидка зарядка через USB</string>
   <string name="usb_fast_charge_summary">Пристрій буде заряджатися швидше, коли воно підключене через USB. Перепідключити пристрій після зміни цієї опції.</string>
+  <string name="blx">Battery Life eXtender</string>
   <string name="charge_rate">Швидкість Заряду</string>
   <string name="charging_current">Струм заряджання</string>
   <string name="charging_current_summary">Встановіть струм заряджання. УВАГА: Перевищення струму в 1250мА може пошкодити зарядку або ваш мобільний пристрій.</string>
@@ -587,6 +601,7 @@
   <string name="read">Читання</string>
   <string name="write">Запис</string>
   <!-- Misc -->
+  <string name="fsync">Fsync</string>
   <string name="dynamic_fsync">Динамичний Fsync</string>
   <string name="gentlefairsleepers">Ввічливе поводження з сплячими процесами</string>
   <string name="gentlefairsleepers_summary">Надання сплячим службам тільки 50% їх функціоналу. Відключення цієї функції може сприяти невеликій економії батареї.</string>
@@ -602,14 +617,29 @@
   <string name="smb135x_wakelock">smb135x Wakelock</string>
   <string name="sensor_ind_wakelock">sensor_ind Wakelock</string>
   <string name="msm_hsic_host_wakelock">msm_hsic_host Wakelock</string>
+  <string name="msm_hsic_host_wakelock_summary">Запобігти вейклоку msm_hsic_host.</string>
   <string name="wlan_rx_wakelock">wlan_rx Wakelock</string>
   <string name="wlan_ctrl_wakelock">wlan_ctrl Wakelock</string>
   <string name="bluesleep_wakelock">BlueSleep Wakelock</string>
   <string name="bluesleep_wakelock_summary">Запобігти BlueSleep Wakelock.</string>
   <string name="wlan_rx_wakelock_divider">дільник wlan_rx Wakelock</string>
   <!-- Data Sharing -->
+  <string name="filter">Фільтр</string>
+  <string name="show_all">Показати все</string>
+  <string name="failed_devices">Не вдалося завантажити пристрої.</string>
+  <string name="previous">Попередня</string>
+  <string name="page">Сторінка</string>
+  <string name="next">Наступна</string>
+  <string name="kernel_version">Версія ядра</string>
+  <string name="potential_sot">Потенційні SOT</string>
+  <string name="screen_always_on">коли екран завжди увімкнений</string>
+  <string name="lower_better">менше - краще</string>
+  <string name="cpu_score">Оцінка процесора</string>
+  <string name="cpu_information">Інформація про CPU</string>
+  <string name="default_settings">За замовчанням (без модифікації)</string>
   <!-- Custom Controls -->
   <string name="welcome">Ласкаво просимо</string>
+  <string name="custom_controls_summary">У цьому розділі можна створити або імпортувати користувацькі елементи керування, які не існують в додатку(поки що).</string>
   <string name="example">Приклади</string>
   <string name="create">Створити</string>
   <string name="import_item">Імпорт</string>
@@ -623,7 +653,10 @@
   <string name="seekbar_min">Минимально</string>
   <string name="seekbar_max">Максимально</string>
   <string name="seekbar_progress">Прогресс</string>
+  <string name="control_generic">Загальні</string>
   <string name="generic_value">Значення</string>
+  <string name="required">обов\'язковий</string>
+  <string name="output">Вивід</string>
   <string name="edit">Редагувати</string>
   <string name="export">Експорт</string>
   <string name="delete">Вилучити</string>
@@ -638,6 +671,7 @@
   <string name="cwm_recovery">CWM Recovery</string>
   <string name="twrp">TWRP</string>
   <string name="manual_flashing">Я буду використовувати мої руки</string>
+  <string name="flashing">Прошивається</string>
   <string name="restoring">Відновлення в процесі</string>
   <!-- Backup -->
   <string name="fota_partition">Розділ оновлення</string>
@@ -649,6 +683,7 @@
   <string name="key">Ключ</string>
   <string name="value">Значення</string>
   <!-- Profile -->
+  <string name="no_changes">Не здійснено жодних змін!</string>
   <string name="apply_question">Застосувати %s?</string>
   <string name="append">Додати</string>
   <string name="details">Подробиці</string>
