--- a/app/src/main/res/values-ro/strings.xml
+++ b/app/src/main/res/values-ro/strings.xml
@@ -127,6 +127,7 @@
   <string name="bus">Magistrală</string>
   <string name="product">Produs</string>
   <string name="version">Versiune</string>
+  <string name="handlers">Manipulatoare</string>
   <!-- CPU -->
   <string name="cores_string">%s nuclee</string>
   <string name="frequencies_string">%s frecvenţe</string>
@@ -293,12 +294,15 @@
   <string name="intellithermal_summary">Un înlocuitor în nucleu pentru Qualcomms Thermald. Dezvoltat de faux123.</string>
   <string name="vdd_restriction">Restricţionare VDD</string>
   <string name="freq_step">Pas de frecvenţă</string>
+  <string name="immediately_limit_stop">Limită oprire imediată</string>
   <string name="poll">Interogare</string>
+  <string name="temp_hysteresis">Histerezisul temperaturii</string>
   <string name="thermal_limit_low">Limita termică de jos</string>
   <string name="thermal_limit_high">Limita termică de sus</string>
   <string name="temp_safety">Temperatura de siguranţă</string>
   <string name="temp_limit">Limita de temperatură</string>
   <string name="temp_limit_summary">Dacă temperatura creşte, frecvența procesorului va fi micşorată pentru a reduce temperatura.</string>
+  <string name="check_interval">Interval de verificare</string>
   <string name="shutdown_temp">Temperatura de închidere</string>
   <!-- GPU -->
   <string name="frequencies">Frecvenţe</string>
@@ -309,9 +313,9 @@
   <string name="gpu_max_freq_summary">Setaţi frecvenţa maximă GPU până la sfârșitul scalei.</string>
   <string name="gpu_min_freq">Frecvenţă minimă GPU</string>
   <string name="gpu_2d_governor">Regulator GPU 2D</string>
-  <string name="gpu_2d_governor_summary">Set regulatorul 2D al GPU-ului.</string>
+  <string name="gpu_2d_governor_summary">Setare regulator 2D al GPU-ului.</string>
   <string name="gpu_governor">Regulator GPU</string>
-  <string name="gpu_governor_summary">Set regulatorul GPU.</string>
+  <string name="gpu_governor_summary">Setare regulator GPU.</string>
   <string name="gpu_governor_tunables">Variabilele regulatorului GPU</string>
   <string name="simple_gpu_algorithm">Algoritmul simplu GPU</string>
   <string name="simple_gpu_algorithm_summary">Un add-on pentru MSM Adreno TZ GPU Governor. Creat de faux123.</string>
@@ -322,13 +326,26 @@
   <string name="green">Verde</string>
   <string name="blue">Albastru</string>
   <string name="min_rgb">Valoarea minimă RGB</string>
+  <string name="invert_screen">Inversare ecran</string>
+  <string name="saturation_intensity">Intensitate saturație</string>
+  <string name="grayscale_mode">Mod alb-negru</string>
+  <string name="screen_hue">Nuanţă ecran</string>
+  <string name="screen_hue_summary">S-ar putea să aveți probleme cu Soc MSM8x26 dacă setați o valoare ridicată.</string>
   <string name="screen_value">Valoare ecran</string>
   <string name="screen_contrast">Contrastul ecranului</string>
   <string name="high_brightness_mode">Mod luminozitate ridicată</string>
   <string name="srgb">sRGB</string>
   <string name="gamma">Gamma</string>
+  <string name="contrast">Contrast</string>
+  <string name="brightness">Luminozitate</string>
+  <string name="min_brightness_summary">Vă permite să micșorați luminozitatea ecranului LCD mai jos decât este posibil în stoc.</string>
   <string name="max_brightness">Luminozitate maximă</string>
+  <string name="max_brightness_summary">Vă permite să măriţi luminozitatea ecranului LCD mai sus decât este posibil în stoc.</string>
+  <string name="backlight_dimmer">Reducere iluminare</string>
   <string name="threshold">Valoarea Threshold</string>
+  <string name="offset">Ofset</string>
+  <string name="glove_mode">Mod \'Mânuşă\'</string>
+  <string name="glove_mode_summary">Activarea acestei opţiuni vă va permite să utilizați telefonul chiar și atunci când purtați mănuși.</string>
   <!-- Wake -->
   <string name="center">Centru</string>
   <string name="full">Complet</string>
@@ -346,6 +363,10 @@
   <string name="draw_w">Desenează un W</string>
   <string name="draw_c">Desenează un C</string>
   <string name="draw_m">Desenează un M</string>
+  <string name="pocket_mode">Modul buzunar</string>
+  <string name="pocket_mode_summary">Activarea acestei funcții va dezactiva comenzile de trezire atunci când dispozitivul se află în buzunar.</string>
+  <string name="timeout">Inactivitate</string>
+  <string name="timeout_summary">Setați durata când controalele de trezire vor fi dezactivate după ce ecranul se opreşte.</string>
   <string name="area">Suprafață</string>
   <string name="width">Lățime</string>
   <string name="height">Înălţime</string>
@@ -365,7 +386,16 @@
   <string name="speed">Viteză</string>
   <string name="stock">Stoc</string>
   <string name="notification">Notificare</string>
+  <string name="on">Pornit</string>
+  <string name="off">Oprit</string>
+  <string name="fade_in">Atenuare graduală</string>
+  <string name="fade_out">Dispariție graduală</string>
+  <string name="test">Test</string>
   <!-- I/O Scheduler -->
+  <string name="internal_storage">Stocare internă</string>
+  <string name="external_storage">Stocare externă</string>
+  <string name="scheduler">Programator</string>
+  <string name="iostats">Statistici I/O</string>
   <string name="rq_affitiny">Afinitate RQ</string>
   <!-- Kernel Samepage Merging -->
   <string name="pages_shared">Pagini partajate</string>
@@ -397,11 +427,16 @@
   <string name="available">Disponibil</string>
   <string name="read">Citire</string>
   <!-- Misc -->
+  <string name="lcd_panel">Panou LCD</string>
+  <string name="hybrid">Hibrid</string>
+  <string name="network">Rețea</string>
+  <string name="hostname">Nume host</string>
   <string name="smb135x_wakelock">smb135x Wakelock</string>
   <string name="sensor_ind_wakelock">wakelock sensor_ind</string>
   <string name="sensor_ind_wakelock_summary">Prevenire wakelock când Afişare Ambient este dezactivată.</string>
   <!-- Data Sharing -->
   <string name="filter">Filtrare</string>
+  <string name="show_all">Afișare totală</string>
   <string name="page">Pagină</string>
   <string name="kernel_version">Versiune nucleu</string>
   <string name="cpu_information">Informaţii CPU</string>
@@ -415,9 +450,17 @@
   <string name="description">Descriere</string>
   <string name="applying">Se aplică</string>
   <string name="seekbar_min">Min</string>
+  <string name="generic_value">Valoare</string>
+  <string name="required">necesar</string>
+  <string name="output">Ieșire</string>
+  <string name="edit">Editare</string>
+  <string name="export">Export</string>
+  <string name="delete">Ştergere</string>
+  <string name="sure_question">Sunteți sigur?</string>
   <string name="name">Nume</string>
   <string name="name_empty">Numele este gol!</string>
   <!-- Downloads -->
+  <string name="downloading_counting">%1$s/%2$s</string>
   <string name="check_md5">Verificare md5</string>
   <string name="install">Instalare</string>
   <string name="cwm_recovery">CWM Recovery</string>
@@ -435,13 +478,39 @@
   <string name="key">Cheie</string>
   <string name="value">Valoare</string>
   <!-- Profile -->
+  <string name="apply_question">Aplicaţi %s?</string>
+  <string name="append">Atașare</string>
   <string name="details">Detalii</string>
   <string name="applied">Aplicat</string>
   <!-- Recovery -->
   <!-- Init.d -->
+  <string name="exceute_question">Executaţi %s?</string>
+  <string name="executing">Se execută</string>
+  <string name="result">Rezultat</string>
   <!-- On Boot -->
+  <string name="on_boot_welcome_summary">Această secțiune vă arată ce se va întâmpla atunci când dispozitivul dvs. se porneşte. Dacă este gol, atunci nimic nu se va întâmpla după pornire.</string>
+  <string name="delete_question">Ştergeţi %s?</string>
+  <string name="disable_question">Dezactivați %s?</string>
   <!-- Settings -->
+  <string name="open_settings">Deschidere setări</string>
+  <string name="fahrenheit_title">Fahrenheit</string>
   <string name="force_english">Utilizare forţată a limbii engleze</string>
+  <string name="user_interface">Interfață utilizator</string>
+  <string name="dark_theme">Temă întunecată</string>
+  <string name="accent_color">Culoare accent</string>
+  <string name="instant">Instant</string>
+  <string name="five_sec">5 secunde</string>
+  <string name="ten_sec">10 secunde</string>
+  <string name="twenty_sec">20 de secunde</string>
+  <string name="fifty_sec">50 de secunde</string>
+  <string name="hide">Ascundere</string>
+  <string name="toast">Notificare</string>
+  <string name="logcat">Logcat</string>
+  <string name="logcat_summary">Copiere logcat pe /sdcard/logcat.txt</string>
+  <string name="last_kmsg">Ultimul mesaj al nucleului</string>
+  <string name="last_kmsg_summary">Copiere /proc/last_kmsg pe /sdcard/last_kmsg.txt</string>
+  <string name="security">Securitate</string>
+  <string name="set_password">Setare parolă</string>
   <!-- About -->
   <!-- Contributors -->
   <!-- Help -->
