--- a/app/src/main/res/values-zh-rTW/strings.xml
+++ b/app/src/main/res/values-zh-rTW/strings.xml
@@ -572,8 +572,7 @@
 (提升I/O效能但增加I/O錯誤的可能)</string>
   <string name="add_random">添加隨機</string>
   <string name="add_random_summary">從旋轉儲存裝置(Hdd機械硬碟) 獲取熵</string>
-  <string name="rq_affitiny">請求(Request) 隊列(Queue) 親和性(Affinity)
-絕對不是wlan喚醒鎖</string>
+  <string name="rq_affitiny">請求(Request) 隊列(Queue) 親和性(Affinity)</string>
   <string name="rq_affinity_summary">盡可能讓核心完成自己發出的調度程序請求，而非給其他的核心來完成，數值越高越積極</string>
   <!-- Kernel Samepage Merging -->
   <string name="full_scans">完整掃描</string>
@@ -834,7 +833,6 @@
   <string name="sections">部分</string>
   <!-- About -->
   <string name="about_me">嗨，我是Willi Ye aka Grarak，一個19歲的學生住在維也納。我已經在Android上開發了很長時間了。除了內核Adiutor之外，我還為幾個設備維護LineageOS，並且使用ParanoidAndroid。所以請理解如果我沒有找到更新此應用程序的時間。</string>
-  <string name="libraries_used">使用的庫</string>
   <!-- Contributors -->
   <string name="commits">%d 提交</string>
   <string name="no_internet">請檢查您的互聯網連接！</string>
