--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -560,8 +560,15 @@
     <string name="level">Level</string>
     <string name="voltage">Voltage</string>
     <string name="capacity">Capacity</string>
-    <string name="usb_fast_charge">USB Fast Charge</string>
-    <string name="usb_fast_charge_summary">Device will charge faster when connected with USB. Replug your charger when changing this option.</string>
+    <string name="usb_fast_charge">Force Fast Charge</string>
+    <string name="usb_fast_charge_summary">If enabled, the device will charge faster when connected to USB. Select custom mode to charge your device in a custom level. Replug your charger when changing these options.</string>
+    <string name="custom_ma">Custom Mode</string>
+    <string name="charge_level_ac">AC Charge Level (mA)</string>
+    <string name="charge_level_ac_summary">Choose your Level</string>
+    <string name="charge_level_usb">USB Charge Level (mA)</string>
+    <string name="charge_level_usb_summary">Choose your Level</string>
+    <string name="charge_level_wireless">WIRELESS Charge Level (mA)</string>
+    <string name="charge_level_wireless_summary">Choose your Level</string>
     <string name="blx">Battery Life eXtender</string>
     <string name="blx_summary">Set a limit for the capacity to which the battery will be charged by passing a value between 0 and 100.</string>
     <string name="charge_rate">Charge Rate</string>
